HSTTWO-2586 Backport: Reduce memory consumption of HST configuration model