@@ -1,5 +1,5 @@
 /*
- *  Copyright 2008 Hippo.
+ *  Copyright 2008-2013 Hippo B.V. (http://www.onehippo.com)
  * 
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package org.hippoecm.hst.provider.jcr;
 import java.util.Calendar;
 import java.util.Map;
 
+import javax.jcr.ItemNotFoundException;
 import javax.jcr.Node;
 import javax.jcr.Property;
 import javax.jcr.PropertyIterator;
@@ -28,6 +29,7 @@ import javax.jcr.ValueFormatException;
 import javax.jcr.nodetype.PropertyDefinition;
 
 import org.apache.commons.lang.ArrayUtils;
+import org.hippoecm.hst.core.internal.StringPool;
 import org.hippoecm.hst.provider.PropertyMap;
 import org.hippoecm.repository.api.HippoNode;
 import org.slf4j.Logger;
@@ -51,26 +53,32 @@ public class JCRValueProviderImpl implements JCRValueProvider{
     
     private boolean detached = false;
     private boolean isLoaded = false;
-   
+    private boolean useStringPool = false;
+
     private PropertyMapImpl propertyMap = new PropertyMapImpl();
     
     public JCRValueProviderImpl(Node jcrNode) {
-        this(jcrNode, true);
+        this(jcrNode, true, false);
     }
-    
+
+    public JCRValueProviderImpl(Node jcrNode, boolean lazyLoading) {
+        this(jcrNode, lazyLoading, false);
+    }
+
     /**
      * if <code>lazyLoading</code> is false, we'll actively fill all the properties of the jcr node in the properties map
      * and fetch the canonical path
      * @param jcrNode
      * @param lazyLoading
      */
-    public JCRValueProviderImpl(Node jcrNode, boolean lazyLoading) {
+    public JCRValueProviderImpl(Node jcrNode, boolean lazyLoading, boolean useStringPool) {
         this.jcrNode = jcrNode;
+        this.useStringPool = useStringPool;
         if(jcrNode == null) {
             return;
         }
         try {
-            this.nodeName = jcrNode.getName();
+            this.nodeName = stringPool(jcrNode.getName());
             this.nodePath = jcrNode.getPath();
             if(!lazyLoading) {
                 populate();
@@ -114,7 +122,7 @@ public class JCRValueProviderImpl implements JCRValueProvider{
         this.detached = true;
         this.jcrNode = null;
         // AFTER a valueprovider is detached, properties cannot be populated any more. This means 
-        // we can optimize the PropertyMapImpl now to not use all unique empty hashmaps. 
+        // we can optimize the PropertyMapImpl
         propertyMap.providerDetached();
     }
     
@@ -210,7 +218,7 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                 PropertyDefinition propDef = prop.getDefinition();
                 loadProperty(prop, propDef, propertyName);
             } else {
-                this.propertyMap.addUnAvailableProperty(propertyName);
+                this.propertyMap.addUnAvailableProperty(stringPool(propertyName));
             }
             return bool;
         } catch (RepositoryException e) {
@@ -255,14 +263,14 @@ public class JCRValueProviderImpl implements JCRValueProvider{
             return o;
         }
         if(this.propertyMap.isUnAvailableProperty(propertyName)) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
         
         loadProperty(propertyName,PropertyType.DOUBLE, false);
         
         o = this.propertyMap.getDoubles().get(propertyName);
         if(o == null) {
-           return new Double(0); 
+           return Double.valueOf(0);
         } 
         return o;
     }
@@ -287,7 +295,7 @@ public class JCRValueProviderImpl implements JCRValueProvider{
     public Long getLong(String propertyName) {
         Long o = this.propertyMap.getLongs().get(propertyName);
         if(o != null) {
-            return (Long)o;
+            return o;
         } 
         
         if(this.propertyMap.isUnAvailableProperty(propertyName)) {
@@ -429,18 +437,19 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                 }
             }
             else {
-                this.propertyMap.addUnAvailableProperty(propertyName);
+                this.propertyMap.addUnAvailableProperty(stringPool(propertyName));
                 log.debug("Property '{}' not found at '{}'.Return null", propertyName, nodePath);
                 return;
             }
         } catch (RepositoryException e) {
             if (log.isWarnEnabled()) log.warn("RepositoryException: Exception for fetching property '{}' from '{}'", propertyName, this.nodePath);
         }
-        return;
     }
     
-    private void loadProperty(Property p, PropertyDefinition propDef, String propertyName){
-       
+    private void loadProperty(Property p, PropertyDefinition propDef, String propertyName) {
+
+        propertyName = stringPool(propertyName);
+
         try {
             switch (p.getType()) {
             case PropertyType.BOOLEAN : 
@@ -454,12 +463,12 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                         i++;
                     }
 
-                    this.propertyMap.getBooleanArrays().put(propertyName, bools);
+                    this.propertyMap.put(propertyName, bools);
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }
                 else {
-                    this.propertyMap.getBooleans().put(propertyName, p.getBoolean());
+                    this.propertyMap.put(propertyName, p.getBoolean());
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }
@@ -469,14 +478,14 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                     String[] strings = new String[values.length];
                     int i = 0;
                     for(Value val : values) {
-                        strings[i] = val.getString();
+                        strings[i] = stringPool(val.getString());
                         i++;
                     }
-                    this.propertyMap.getStringArrays().put(propertyName, strings);
+                    this.propertyMap.put(propertyName, strings);
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 } else {
-                    this.propertyMap.getStrings().put(propertyName, p.getString());
+                    this.propertyMap.put(propertyName, stringPool(p.getString()));
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }
@@ -489,11 +498,11 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                         longs[i] = val.getLong();
                         i++;
                     }
-                    this.propertyMap.getLongArrays().put(propertyName, longs);
+                    this.propertyMap.put(propertyName, longs);
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 } else {
-                    this.propertyMap.getLongs().put(propertyName, p.getLong());
+                    this.propertyMap.put(propertyName, p.getLong());
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }
@@ -506,11 +515,11 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                         doubles[i] = val.getDouble();
                         i++;
                     }
-                    this.propertyMap.getDoubleArrays().put(propertyName, doubles);
+                    this.propertyMap.put(propertyName, doubles);
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 } else {
-                    this.propertyMap.getDoubles().put(propertyName, p.getDouble());
+                    this.propertyMap.put(propertyName, p.getDouble());
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }    
@@ -523,11 +532,11 @@ public class JCRValueProviderImpl implements JCRValueProvider{
                         dates[i] = val.getDate();
                         i++;
                     }
-                    this.propertyMap.getCalendarArrays().put(propertyName, dates);
+                    this.propertyMap.put(propertyName, dates);
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 } else {
-                    this.propertyMap.getCalendars().put(propertyName, p.getDate());
+                    this.propertyMap.put(propertyName, p.getDate());
                     this.propertyMap.addAvailableProperty(propertyName);
                     return;
                 }    
@@ -618,6 +627,10 @@ public class JCRValueProviderImpl implements JCRValueProvider{
             }
             
         }
+    }
+
+    private String stringPool(String string) {
+        return useStringPool ? StringPool.get(string) : string;
     }
 
 }
